[package]
name = "tmuxession"
version = "0.5.0"
authors = ["Vasilis Tsiolkas"]
description = "A tool for saving and restoring tmux sessions"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
regex = "1.10.4"
xdg = "2.5.2"
urlencoding = "2.1.3"
clap = { version = "4.5.6", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
